[package]
name = "dht-to-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["sifis-dht/vendored"]

[dependencies]
rumqttc = { version="0.16.0", features = ["use-rustls"] }
tokio = { version = "1.19.0", features = ["full"] }
rustls = "0.20"
rustls-native-certs = "0.6"
env_logger = "0.9.0"
sifis-dht = { git = "https://github.com/sifis-home/libp2p-rust-dht" }
serde_json = "1.0.85"
rsa = "0.6"
pem-rfc7468 = "0.3"
rand = "0.8"
