[package]
name = "dht-to-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["sifis-dht/vendored"]

[dependencies]
serde = {version = "1.0.159", features = ["derive"]}
clap = { version = "4.1.1", features = ["derive"] }
toml = "0.7.3"
rumqttc = { version="0.16.0", features = ["use-rustls"] }
tokio = { version = "1.19.0", features = ["full"] }
rustls = "0.20"
rustls-native-certs = "0.6"
env_logger = "0.9.0"
sifis-dht = { git = "https://github.com/sifis-home/libp2p-rust-dht", branch="sqlx" }
sifis-config = { git = "https://github.com/sifis-home/libp2p-rust-dht", branch="sqlx" }
serde_json = "1.0"
rsa = "0.6"
pem-rfc7468 = "0.3"
rand = "0.8"
reqwest = {version="0.11.16", features = ["json"]}